feat: Add initial loading indicator
Displays a "Loading..." message centered on the screen while the React app initializes. This provides immediate visual feedback to the user.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="flex items-center justify-center min-h-screen text-gray-400">
+        Loading...
+      </div>
+    </div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
